--- a/src/test/resources/qa.properties
+++ b/src/test/resources/qa.properties
@@ -1,10 +1,11 @@
-testData.valueOfNumberOfInstances = 4
-testData.valueOfOperatingSystem = Free: Debian, CentOS
+testData.valueOfNumberOfInstances = 2
+testData.valueOfOperatingSystem = Paid: SLES
 testData.valueOfMachineClass = Regular
-testData.valueOfMachineType = n1-standard-8
-testData.valueOfNumberOfGpus = 1
-testData.valueOfGpuType = NVIDIA Tesla V100
-testData.valueOfLocalSSD = 2x375
-testData.valueOfDatacenterLocation = Frankfurt
-testData.valueOfCommittedUsage = 1 Year
-testData.cost = 1,082.77
+testData.valueOfMachineSeries = N1
+testData.valueOfMachineType = n1-standard-2 (vCPUs: 2, RAM: 7.5GB)
+testData.valueOfGpuType = NVIDIA Tesla P4
+testData.valueOfNumberOfGpus = 4
+testData.valueOfLocalSSD = 6x375 GB
+testData.valueOfDatacenterLocation = Dallas (us-south1) 
+testData.valueOfCommittedUsage = 3 Years
+testData.cost = 2286.04
