commit 3 Aug,2022 1st time

--- a/src/test/resources/qa.properties
+++ b/src/test/resources/qa.properties
@@ -1,11 +1,11 @@
 testData.valueOfNumberOfInstances = 2
-testData.valueOfOperatingSystem = Paid: SLES
-testData.valueOfMachineClass = Regular
-testData.valueOfMachineSeries = N1
-testData.valueOfMachineType = n1-standard-2 (vCPUs: 2, RAM: 7.5GB)
-testData.valueOfGpuType = NVIDIA Tesla P4
-testData.valueOfNumberOfGpus = 4
-testData.valueOfLocalSSD = 6x375 GB
-testData.valueOfDatacenterLocation = Dallas (us-south1) 
-testData.valueOfCommittedUsage = 3 Years
-testData.cost = 2286.04
+#testData.valueOfOperatingSystem = Paid: SLES
+#testData.valueOfMachineClass = Regular
+#testData.valueOfMachineSeries = N1
+#testData.valueOfMachineType = n1-standard-2 (vCPUs: 2, RAM: 7.5GB)
+#testData.valueOfGpuType = NVIDIA Tesla P4
+#testData.valueOfNumberOfGpus = 4
+#testData.valueOfLocalSSD = 6x375 GB
+#testData.valueOfDatacenterLocation = Dallas (us-south1)
+#testData.valueOfCommittedUsage = 3 Years
+#testData.cost = 2286.04
