--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -1,11 +1,11 @@
 testData.valueOfNumberOfInstances = 4
-testData.valueOfOperatingSystem = Free: Debian, CentOS, CoreOS, Ubuntu or BYOL (Bring Your Own License)
-testData.valueOfMachineClass = Regular
-testData.valueOfMachineSeries = N1
-testData.valueOfMachineType =  n1-standard-8 (vCPUs: 8, RAM: 30 GB)
-testData.valueOfGpuType = NVIDIA Tesla V100
-testData.valueOfNumberOfGpus = 1
-testData.valueOfLocalSSD = 2x375 GB
-testData.valueOfDatacenterLocation =  Frankfurt (europe-west3)
-testData.valueOfCommittedUsage = 1 Year
-testData.cost = 1,082.77
+#testData.valueOfOperatingSystem = Free: Debian, CentOS, CoreOS, Ubuntu or BYOL (Bring Your Own License)
+#testData.valueOfMachineClass = Regular
+#testData.valueOfMachineSeries = N1
+#testData.valueOfMachineType =  n1-standard-8 (vCPUs: 8, RAM: 30 GB)
+#testData.valueOfGpuType = NVIDIA Tesla V100
+#testData.valueOfNumberOfGpus = 1
+#testData.valueOfLocalSSD = 2x375 GB
+#testData.valueOfDatacenterLocation =  Frankfurt (europe-west3)
+#testData.valueOfCommittedUsage = 1 Year
+#testData.cost = 1,082.77
