--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <version>2.22.1</version>
         <configuration>
           <suiteXmlFiles>
-            <file>C:\Users\Sakshi_Kumari\IdeaProjects\HurtMePlenty_SelDriver\src\test\resources\testng-smoke.xml</file>
+            <file>C:\Users\Sakshi_Kumari\IdeaProjects\HurtMePlenty_SelDriver\src\test\resources\testng-all.xml</file>
           </suiteXmlFiles>
         </configuration>
       </plugin>
